--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.12.2
 opencv-python==4.6.0.66
 numpy==1.22.4
+tensorflow==2.9.1
 keras==2.9.0
 Keras-Preprocessing==1.1.2
 Pillow==9.1.1
